cluster/gitops/networking/vpn-gateway/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway
specs:
  - description: vpn-gateway
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: vpn-gateway
        app.kubernetes.io/instance: vpn-gateway
        app.kubernetes.io/component: vpn-gateway
    egress:
      # Allow traffic to the VPN endpoints.
      - toCIDRSet:
          - cidrGroupSelector:
              matchLabels:
                external.netpols.home.arpa/egress.vpn-endpoints: "true"
        toPorts:
          - ports:
              - port: "1"
                endPort: 65535
                protocol: UDP
      # Traffic to services that listen for port-forwarded VPN traffic
      - toEndpoints:
          - matchExpressions: &any_namespace
              - key: io.kubernetes.pod.namespace
                operator: Exists
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-1-tcp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_1}"'
                protocol: TCP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-1-udp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_1}"'
                protocol: UDP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-2-tcp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_2}"'
                protocol: TCP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-2-udp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_2}"'
                protocol: UDP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-3-tcp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_3}"'
                protocol: TCP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-3-udp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_3}"'
                protocol: UDP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-4-tcp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_4}"'
                protocol: TCP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-4-udp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_4}"'
                protocol: UDP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-5-tcp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_5}"'
                protocol: TCP
      - toEndpoints:
          - matchExpressions: *any_namespace
            matchLabels:
              endpoints.netpols.home.arpa/vpn-listener: "true"
              endpoints.netpols.home.arpa/vpn-port-5-udp: "true"
        toPorts:
          - ports:
              - port: '"${SECRET_VPN_FORWARDED_PORT_5}"'
                protocol: UDP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "9999"
                protocol: TCP
      # Proxy ports
      - fromEndpoints:
          - matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
            matchLabels:
              endpoints.netpols.home.arpa/vpn-client: "true"
        toPorts:
          - ports:
              # HTTP proxy
              - port: "8888"
                protocol: TCP
              # Shadowsocks proxy
              - port: "8388"
                protocol: TCP
              - port: "8388"
                protocol: UDP
